@@ -43,7 +43,7 @@ MAP_KEY(Control,    CONTROL)
 MAP_KEY(Alt,        ALT)
 MAP_KEY(CapsLock,   CAPS_LOCK)
 MAP_KEY(Escape,     ESCAPE)
-MAP_KEY(Space,      SPACE)
+MAP_KEY_CHAR(Space, ' ')
 MAP_KEY(PageUp,     PAGE_UP)
 MAP_KEY(PageDown,   PAGE_DOWN)
 MAP_KEY(End,        END)
